# codexpet

./: .gitignore  RUN_PLATFORM.md  test_bad_code.py
roastpet-web/: next.config.ts  package-lock.json  package.json
roastpet-web/prisma/: schema.prisma
roastpet-web/public/: index.html
roastpet-web/src/app/: globals.css  page.tsx  sprites.ts
roastpet-web/src/app/api/commands/interpret/: route.ts
roastpet-web/src/app/api/commands/plan/: route.ts
roastpet-web/src/app/api/commands/poll/: route.ts
roastpet-web/src/app/api/commands/send/: route.ts
roastpet-web/src/app/api/commands/status/: route.ts
roastpet-web/src/app/api/companion/chat/: route.ts
roastpet-web/src/app/api/companion/proactive/: route.ts
roastpet-web/src/app/api/pets/[token]/: route.ts
roastpet-web/src/app/api/pets/create/: route.ts
roastpet-web/src/app/api/pets/presence/: route.ts
roastpet-web/src/app/api/roast/: route.ts
roastpet-web/src/app/api/system/share-url/: route.ts
roastpet-web/src/app/api/voice/: route.ts
roastpet-web/src/app/buddy/[token]/: page.tsx
roastpet-web/src/lib/: command-store.ts  companion-memory.ts  pet-assignment.ts  presence-store.ts  user-pet-registry.ts
roastpet_cli/: __init__.py  __main__.py  ai_client.py  audio.py  backend_client.py  cli.py  code_scout.py  companion_memory.py  desktop_companion.py  fixer.py  instance_guard.py  notifications.py  pet_ui.py  pet_voice.py  port_sprites.js  port_sprites.py  pyproject.toml  requirements.txt  rpg_engine.py  sprites.py  watcher.py
roastpet_cli/audio/: PIXABAY_IMPORT_NOTES.md
